# apps/api/src/controllers/surau.ts
@@ -1,5 +1,5 @@
-import {Get, Patch, Route} from 'tsoa'
-import { getAllSurau, updateSurau } from '../db/surau'
+import {Delete, Get, Patch, Route} from 'tsoa'
+import { getAllSurau, updateSurau, removeSurau, getSurau } from '../db/surau'
 
 type SurauResponse = {
     name: string
@@ -20,9 +20,19 @@ export default class SurauController {
         const data = await getAllSurau()
         return data
     }
+    @Get('/:id')
+    public async getOneSurau(id: string): Promise<SurauResponse> {
+        const data = await getSurau(id)
+        return data
+    }
     @Patch('/:id')
     public async patchSurau(id: string): Promise<SurauResponse[]> {
         const data = await updateSurau(id)
+        return data
+    }
+    @Delete('/:id')
+    public async deleteSurau(id: string): Promise<SurauResponse[]> {
+        const data = await removeSurau(id)
         return data
     }
 }
